# aion

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: demo.py  demo_agent.py  demo_enterprise.py  demo_memory.py  demo_observability.py
examples/use-cases/: README.md
examples/use-cases/agentic-app-quickstart/: README.md  run.py
examples/use-cases/report-generator/: README.md  run.py
src/aion/: __init__.py  agent.py  cli.py
src/aion/core/: __init__.py  context.py  engine.py  exceptions.py  memory.py  worker.py  workflow.py
src/aion/memory/: __init__.py  store.py
src/aion/middleware/: __init__.py  policies.py
src/aion/patterns/: __init__.py  planner.py  scraper.py  sdr.py
src/aion/telemetry/: __init__.py  tracer.py
tests/: conftest.py  test_agent.py  test_e2e_phase2.py  test_memory.py  test_phase3_enterprise.py  test_phase4_observability.py
